게시글 관련 api 스웨거 내용 정리 및 코드 간결화